Fix: Adjust AI reaction styling
Adjusted padding and layout of the AI message actions within the message bubble to prevent overlap and ensure consistent display.  Improved positioning and visual clarity of the copy, like, and dislike buttons. Updated `.gitignore` to ignore secret files and testing files.

--- a/src/features/msgBubble/styles/MsgBubble.module.css
+++ b/src/features/msgBubble/styles/MsgBubble.module.css
@@ -61,26 +61,30 @@
   letter-spacing: 0.3px;
   word-spacing: 2px;
   box-shadow: var(--aiMsg-bg-shadow);
-  padding-bottom: 12px;
+  padding-bottom: 15px;
 }
 
 .ai_msg_actions_pos {
   display: flex;
   flex-direction: row-reverse;
+  height: 10px;
   position: relative;
-  bottom: 10px;
-  margin-right: 15px;
-  padding-inline: 10px;
 }
+
 .ai_msg_actions {
+  margin-right: 15px;
+  display: inline-flex;
   flex-direction: row-reverse;
-  display: flex;
   border-radius: 7px;
-  background: var(--aiMsg-bg);
   border: 1px solid var(--aiMsg-bg);
+  background: var(--aiMsg-bg);
   font: normal medium "Exo2", "Montserrat", sans-serif;
   box-shadow: var(--copyBtn-shadow);
+
+  position: absolute;
+  bottom: 1px;
 }
+
 .copy_btn {
   padding: 2px 10px;
   background: transparent;
@@ -89,19 +93,17 @@
   outline: none;
   backdrop-filter: blur(10px);
   color: var(--text-color-opposite);
-  /* background: var(--aiMsg-bg); */
-  /* font: normal medium "Exo2", "Montserrat", sans-serif; */
-  /* box-shadow: var(--copyBtn-shadow); */
+  border-radius: 7px;
 }
 
 .like_dislike_btn {
   cursor: pointer;
   background: transparent;
-  backdrop-filter: blur(10px);
   color: var(--text-color-opposite);
   border: none;
   padding-inline: 5px;
 }
+
 /*     CSS for loader component    */
 /* =============================== */
 
